[Autofill Views] Draw separator background

Currently, we don't draw the background on the separator. This is fine
on Win and Mac, because by default we just see white anyway. But on
Linux (specifically GTK+) we draw gray by default, giving an ugly gray
splotch.

Change-Id: I6f6d61d7ade28d30a659858a9a83bf0506aa3637
Bug: 866637
Reviewed-on: https://chromium-review.googlesource.com/1147158
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577373}
Former-commit-id: a1349268f945805bcc749dd5b292a77802d5f753